--- a/index.html
+++ b/index.html
@@ -1,71 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
-<html lang="en"> 
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
- 
-  <meta charset="utf-8">
+    <title>Grafique</title>
 
-  <title>Grafique</title>
-  
-  <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-  <!-- <meta name="description" lang="en" content=""> -->
-  
-  <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-  <!-- <meta name="keywords" lang="en" content=""> -->
-  
-  <!-- View-port Basics: http://mzl.la/VYREaP -->
-  <!-- This meta tag is used for mobile device to display the page without any zooming,
+    <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
+    <!-- <meta name="description" lang="en" content=""> -->
+
+    <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
+    <!-- <meta name="keywords" lang="en" content=""> -->
+
+    <!-- View-port Basics: http://mzl.la/VYREaP -->
+    <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
        Remove comments from this tag, when you want to apply media queries to the website. -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
-  
-  <!-- To adhear no-cache for Chrome -->
-<!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+
+    <!-- To adhear no-cache for Chrome -->
+    <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
   <meta http-equiv="Pragma" content="no-store, no-cache" />
   <meta http-equiv="Expires" content="0" /> -->
 
-  <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link rel="shortcut icon" href="favicon.ico" />
+    <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
+    <link rel="shortcut icon" href="favicon.ico" />
 
-  <!--font-awesome link for icons-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--font-awesome link for icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-  <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-  <link rel="stylesheet" media="screen" href="assets/css/style.css" >
+    <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
+    <link rel="stylesheet" media="screen" href="assets/css/style.css" />
 
-  <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->	
-  <!--[if lt IE 9]>  
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
-  <![endif]-->
+    <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
 
-</head>
+  <body>
+    <!--container start-->
+    <div class="container">
+      <!--header section start-->
+      <header>
+        <div class="wrapper">
+          <div class="outter-box header-outter">
+            <div class="left-header">
+              <h1>
+                <a href="./index.html" class="header-logo" title="Header Logo"><img src="assets/images/logo.png" alt="Header Logo" />header logo</a>
+              </h1>
+            </div>
+            <nav class="right-nav">
+              <ul class="nav-menu">
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Home">Home</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="About">About</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Projects">Projects</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Our Team">Our Team</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Contact Us">Contact Us</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Blog">Blog</a>
+                </li>
+                <li class="menu-list">
+                  <a href="#FIXME" class="menu-item" title="Search">Search</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <!--header section start-->
+      <!--main section start-->
+      <main>
+        <section class="banner">
+          <div class="outter-box">
+            <div class="left-banner">
 
-<body>
-  <!--container start-->
-  <div class="container">
-    <!--header section start-->
-    <header>
-      
-    </header>
-    <!--header section start-->
-    <!--main section start-->
-    <main>
+            </div>
+            <div class="right-banner">
+              
+            </div>
+          </div>
+        </section>
+      </main>
+      <!--main section end-->
 
-    </main>
-    <!--main section end-->
+      <!--footer section start-->
+      <footer></footer>
+      <!--footer section end-->
+    </div>
+    <!--container end-->
 
-    <!--footer section start-->
-    <footer>      
-
-    </footer>
-    <!--footer section end-->
-
-  </div>
-  <!--container end-->
-
-<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
+    <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
 <script src="js/script.js"></script> -->
-</body>
+  </body>
 </html>
