added banner section

--- a/index.html
+++ b/index.html
@@ -86,12 +86,49 @@
       <!--main section start-->
       <main>
         <section class="banner">
-          <div class="outter-box">
-            <div class="left-banner">
-
-            </div>
-            <div class="right-banner">
-              
+          <div class="wrapper">
+            <div class="outter-box">
+              <div class="left-banner">
+                <h2 class="normal-heading">build</h2>
+                <h3 class="bold-heading">exclusive</h3>
+                <span class="letter-space">edifices</span>
+                <ul class="slider-lines">
+                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                </ul>
+              </div>
+              <div class="right-banner">
+                <ul class="sliders">
+                  <li class="slider-images">
+                    <figure>
+                      <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
+                    </figure>
+                  </li>
+                  <li class="slider-images">
+                    <figure>
+                      <img src="assets/images/image1.jpg" alt="Slider Image">
+                    </figure>
+                  </li>
+                  <li class="slider-images">
+                    <figure>
+                      <img src="assets/images/image2.jpg" alt="Slider Image">
+                    </figure>
+                  </li>
+                  <li class="slider-images">
+                    <figure>
+                      <img src="assets/images/img2.jpg" alt="Slider Image">
+                    </figure>
+                  </li>
+                  <li class="slider-images">
+                    <figure>
+                      <img src="assets/images/img3.jpg" alt="Slider Image">
+                    </figure>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
