added why us section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,24 @@
             </div>
           </div>
         </section>
+        <section class="why-us">
+          <div class="wrapper">
+            <div class="outter-box">
+              <div class="left-content">
+                <span class="letter-space">why us?</span>
+                <h3 class="normal-heading">add</h3>
+                <h3 class="normal-heading">the most</h3>
+                <h4 class="bold-heading">bold projects</h4>
+                <p class="content">
+                  Among many of my great projects there are some that occupy special places in my portfolio. There are lots of beautiful pieces created for the large families to become ancestral homes for the people who love art and architecture and value creativity in this hard and non sophisticated world of today.
+                </p>
+              </div>
+              <div class="right-content">
+
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <!--main section end-->
 
