--- a/index.html
+++ b/index.html
@@ -145,9 +145,34 @@
                 </p>
               </div>
               <div class="right-content">
-
+                <figure>
+                  <img src="assets/images/image2.jpg" alt="Images">
+                </figure>
+                <figure>
+                  <img src="assets/images/image1.jpg" alt="Images">
+                </figure>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="ask-pquestion">
+          <div class="wrapper">
+            <h4 class="normal-pheading">ask</h4>
+            <h5 class="bold-heading">a question</h5>
+            <form action="#FIXME" method="post">
+              <div class="form-group">
+                <input type="text" name="name" class="form-pcontent" placeholder="Name:">
+              </div>
+              <div class="form-group">
+                <input type="text" name="email" class="form-pcontent" placeholder="Email:">
+              </div>
+              <div class="form-group">
+                <textarea name="question" cols="30" rows="10" class="form-content"></textarea>
+              </div>
+              <div class="form-pgroup">
+                <input type="submit" name="send" class="send-button" value="SEND">
+              </div>
+            </form>
           </div>
         </section>
       </main>
