added footer section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
               <h1>
                 <a href="./index.html" class="header-logo" title="Header Logo"><img src="assets/images/logo.png" alt="Header Logo" />header logo</a>
               </h1>
+              <span class="architect">Architect</span>
             </div>
             <nav class="right-nav">
               <ul class="nav-menu">
                 <li class="menu-list">
-                  <a href="#FIXME" class="menu-item" title="Home">Home</a>
+                  <a href="./index.html" class="menu-item" title="Home">Home</a>
                 </li>
                 <li class="menu-list">
                   <a href="#FIXME" class="menu-item" title="About">About</a>
@@ -145,10 +146,10 @@
                 </p>
               </div>
               <div class="right-content">
-                <figure>
+                <figure class="below-image">
                   <img src="assets/images/image2.jpg" alt="Images">
                 </figure>
-                <figure>
+                <figure class="above-image">
                   <img src="assets/images/image1.jpg" alt="Images">
                 </figure>
               </div>
@@ -157,7 +158,7 @@
         </section>
         <section class="ask-pquestion">
           <div class="wrapper">
-            <h4 class="normal-pheading">ask</h4>
+            <h4 class="normal-heading">ask</h4>
             <h5 class="bold-heading">a question</h5>
             <form action="#FIXME" method="post">
               <div class="form-group">
@@ -179,7 +180,41 @@
       <!--main section end-->
 
       <!--footer section start-->
-      <footer></footer>
+      <footer>
+        <div class="wrapper">
+          <div class="top-footer">
+            <div class="inner-footer">
+              <ul>
+                <li class="footer-left">
+                  <h6>
+                    <a href="./index.html" class="header-logo" title="Footer Logo"><img src="assets/images/logo.png" alt="Footer Logo">footer logo</a>
+                  </h6>
+                  <span class="architect">Architect</span>
+                </li>
+                <li class="footer-right">
+                  <ul class="nav-footer">
+                    <li class="footer-menu"><a href="./index.html" title="Home">Home</a></li>
+                    <li class="footer-menu"><a href="#FIXME" title="Blog">Blog</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+            <div class="inner-footer">
+              <div class="copyright">
+                <span>Grafique Copyright &copy; 2019</span><a href="#FIXME" target="_blank" title="Zemez">Zemez</a>
+              </div>
+              <ul class="social-links">
+                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Facebook">facebook</a></li>
+                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Twitter">twitter</a></li>
+                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Instagram">instagram</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="bottom-footer">
+            <span>Best</span><a href="#FIXME" target="_blank" title="Wordpress Themes">WordPress themes</a><span>at TemplateMonster</span>
+          </div>
+        </div>
+      </footer>
       <!--footer section end-->
     </div>
     <!--container end-->
