display none to slider images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!--header section start-->
       <header>
         <div class="wrapper">
-          <div class="outter-box header-outter">
+          <div class="header-box">
             <div class="left-header">
               <h1>
                 <a href="./index.html" class="header-logo" title="Header Logo"><img src="assets/images/logo.png" alt="Header Logo" />header logo</a>
@@ -88,7 +88,7 @@
       <main>
         <section class="banner">
           <div class="wrapper">
-            <div class="outter-box">
+            <div class="banner-box">
               <div class="left-banner">
                 <h2 class="normal-heading">build</h2>
                 <h3 class="bold-heading">exclusive</h3>
@@ -103,22 +103,22 @@
               </div>
               <div class="right-banner">
                 <ul class="sliders">
-                  <li class="slider-images">
+                  <li class="slider-images display-none">
                     <figure>
                       <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
                     </figure>
                   </li>
-                  <li class="slider-images">
+                  <li class="slider-images display-none">
                     <figure>
                       <img src="assets/images/image1.jpg" alt="Slider Image">
                     </figure>
                   </li>
-                  <li class="slider-images">
+                  <li class="slider-images display-none">
                     <figure>
                       <img src="assets/images/image2.jpg" alt="Slider Image">
                     </figure>
                   </li>
-                  <li class="slider-images">
+                  <li class="slider-images display-none">
                     <figure>
                       <img src="assets/images/img2.jpg" alt="Slider Image">
                     </figure>
