added headings class

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <div class="wrapper">
             <div class="banner-box">
               <div class="left-banner">
-                <h2 class="normal-heading">build</h2>
-                <h3 class="bold-heading">exclusive</h3>
+                <h2 class="normal-heading headings">build</h2>
+                <h3 class="bold-heading headings">exclusive</h3>
                 <span class="letter-space">edifices</span>
                 <ul class="slider-lines">
                   <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
@@ -138,9 +138,9 @@
             <div class="outter-box">
               <div class="left-content">
                 <span class="letter-space">why us?</span>
-                <h3 class="normal-heading">add</h3>
-                <h3 class="normal-heading">the most</h3>
-                <h4 class="bold-heading">bold projects</h4>
+                <h3 class="normal-heading headings">add</h3>
+                <h3 class="normal-heading headings">the most</h3>
+                <h4 class="bold-heading headings">bold projects</h4>
                 <p class="content">
                   Among many of my great projects there are some that occupy special places in my portfolio. There are lots of beautiful pieces created for the large families to become ancestral homes for the people who love art and architecture and value creativity in this hard and non sophisticated world of today.
                 </p>
@@ -158,8 +158,8 @@
         </section>
         <section class="ask-pquestion">
           <div class="wrapper">
-            <h4 class="normal-heading">ask</h4>
-            <h5 class="bold-heading">a question</h5>
+            <h4 class="normal-heading headings">ask</h4>
+            <h5 class="bold-heading headings">a question</h5>
             <form action="#FIXME" method="post">
               <div class="form-group">
                 <input type="text" name="name" class="form-pcontent" placeholder="Name:">
