--- a/index.html
+++ b/index.html
@@ -89,47 +89,65 @@
         <section class="banner">
           <div class="wrapper">
             <div class="banner-box">
-              <div class="left-banner">
-                <h2 class="normal-heading headings">build</h2>
-                <h3 class="bold-heading headings">exclusive</h3>
-                <span class="letter-space">edifices</span>
-                <ul class="slider-lines">
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                </ul>
-              </div>
-              <div class="right-banner">
-                <ul class="sliders">
-                  <li class="slider-images display-none">
-                    <figure>
-                      <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images display-none">
-                    <figure>
-                      <img src="assets/images/image1.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images display-none">
-                    <figure>
-                      <img src="assets/images/image2.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images display-none">
-                    <figure>
-                      <img src="assets/images/img2.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/img3.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                </ul>
-              </div>
+              <ul class="sliders">
+                <li class="slider-images display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="slider-images display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/image1.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="slider-images display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/image2.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="slider-images display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/img2.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="slider-images">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/img3.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+              </ul>
+              <ul class="slider-lines">
+                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line slide-active" title="Line">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+              </ul>
             </div>
           </div>
         </section>
