--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                 </li>
               </ul>
               <ul class="slider-lines">
-                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                <li class="slides"><a href="#FIXME" class="line slide-active" title="Line">Line</a></li>
-                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="First slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Second slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line slide-active" title="Third slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Fourth slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Fifth slide">Line</a></li>
               </ul>
             </div>
           </div>
@@ -164,32 +164,30 @@
                 </p>
               </div>
               <div class="right-content">
-                <figure class="below-image">
-                  <img src="assets/images/image2.jpg" alt="Images">
-                </figure>
-                <figure class="above-image">
-                  <img src="assets/images/image1.jpg" alt="Images">
+                <figure>
+                  <img src="assets/images/image2.jpg" class="below-image" alt="Image">
+                  <img src="assets/images/image1.jpg" class="above-image" alt="Image">
                 </figure>
               </div>
             </div>
           </div>
         </section>
-        <section class="ask-pquestion">
+        <section class="ask-question">
           <div class="wrapper">
             <h4 class="normal-heading headings">ask</h4>
             <h5 class="bold-heading headings">a question</h5>
             <form action="#FIXME" method="post">
               <div class="form-group">
-                <input type="text" name="name" class="form-pcontent" placeholder="Name:">
+                <input type="text" name="name" class="form-content" placeholder="Name:">
               </div>
               <div class="form-group">
-                <input type="text" name="email" class="form-pcontent" placeholder="Email:">
+                <input type="text" name="email" class="form-content" placeholder="E-mail address:">
               </div>
               <div class="form-group">
-                <textarea name="question" cols="30" rows="10" class="form-content"></textarea>
+                <textarea name="question" cols="30" rows="10" class="form-content" placeholder="Question"></textarea>
               </div>
-              <div class="form-pgroup">
-                <input type="submit" name="send" class="send-button" value="SEND">
+              <div class="form-group">
+                <input type="submit" name="send" class="send-button" value="Send">
               </div>
             </form>
           </div>
@@ -201,35 +199,22 @@
       <footer>
         <div class="wrapper">
           <div class="top-footer">
-            <div class="inner-footer">
-              <ul>
-                <li class="footer-left">
-                  <h6>
-                    <a href="./index.html" class="header-logo" title="Footer Logo"><img src="assets/images/logo.png" alt="Footer Logo">footer logo</a>
-                  </h6>
-                  <span class="architect">Architect</span>
-                </li>
-                <li class="footer-right">
-                  <ul class="nav-footer">
-                    <li class="footer-menu"><a href="./index.html" title="Home">Home</a></li>
-                    <li class="footer-menu"><a href="#FIXME" title="Blog">Blog</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            <div class="inner-footer">
-              <div class="copyright">
-                <span>Grafique Copyright &copy; 2019</span><a href="#FIXME" target="_blank" title="Zemez">Zemez</a>
-              </div>
-              <ul class="social-links">
-                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Facebook">facebook</a></li>
-                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Twitter">twitter</a></li>
-                <li class="solcial-icon"><a href="#FIXME" target="_blank" class="icon" title="Instagram">instagram</a></li>
-              </ul>
-            </div>
+            <h6>
+              <a href="./index.html" class="header-logo" title="Footer Logo"><img src="assets/images/logo.png" alt="Footer Logo">footer logo</a>
+              <span class="architect">Architect</span>
+            </h6>
+            <ul class="nav-footer">
+              <li class="footer-menu"><a href="./index.html" title="Home">Home</a></li>
+              <li class="footer-menu"><a href="#FIXME" title="Blog">Blog</a></li>
+            </ul>
           </div>
           <div class="bottom-footer">
-            <span>Best</span><a href="#FIXME" target="_blank" title="Wordpress Themes">WordPress themes</a><span>at TemplateMonster</span>
+            <p>Grafique Copyright &copy; 2019 <a href="#FIXME" target="_blank" title="Zemez">Zemez</a></p>
+            <ul class="social-links">
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Facebook">facebook</a></li>
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Twitter">twitter</a></li>
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Instagram">instagram</a></li>
+            </ul>
           </div>
         </div>
       </footer>
