slider-image class remove

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="wrapper">
             <div class="banner-box">
               <ul class="sliders">
-                <li class="slider-images display-none">
+                <li class="display-none">
                   <div class="slider-content">
                     <h2 class="normal-heading headings">build</h2>
                     <h3 class="bold-heading headings">exclusive</h3>
@@ -100,7 +100,7 @@
                     <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
                   </figure>
                 </li>
-                <li class="slider-images display-none">
+                <li class="display-none">
                   <div class="slider-content">
                     <h2 class="normal-heading headings">build</h2>
                     <h3 class="bold-heading headings">exclusive</h3>
@@ -110,7 +110,7 @@
                     <img src="assets/images/image1.jpg" alt="Slider Image">
                   </figure>
                 </li>
-                <li class="slider-images display-none">
+                <li class="display-none">
                   <div class="slider-content">
                     <h2 class="normal-heading headings">build</h2>
                     <h3 class="bold-heading headings">exclusive</h3>
@@ -120,7 +120,7 @@
                     <img src="assets/images/image2.jpg" alt="Slider Image">
                   </figure>
                 </li>
-                <li class="slider-images display-none">
+                <li class="display-none">
                   <div class="slider-content">
                     <h2 class="normal-heading headings">build</h2>
                     <h3 class="bold-heading headings">exclusive</h3>
