add active class to footer nav

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <span class="architect">Architect</span>
             </h6>
             <ul class="nav-footer">
-              <li class="footer-menu"><a href="./index.html" title="Home">Home</a></li>
+              <li class="footer-menu"><a href="./index.html" class="nav-active" title="Home">Home</a></li>
               <li class="footer-menu"><a href="#FIXME" title="Blog">Blog</a></li>
             </ul>
           </div>
