--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <span class="architect">Architect</span>
             </div>
             <nav class="right-nav">
+              <a href="#FIXME" title="hamburger" class="hamburger">hamburger</a>
               <ul class="nav-menu">
                 <li class="menu-list">
                   <a href="./index.html" class="menu-item" title="Home">Home</a>
@@ -75,7 +76,7 @@
                 <li class="menu-list">
                   <a href="#FIXME" class="menu-item" title="Blog">Blog</a>
                 </li>
-                <li class="menu-list">
+                <li class="menu-list search">
                   <a href="#FIXME" class="menu-item" title="Search">Search</a>
                 </li>
               </ul>
