--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
        Remove comments from this tag, when you want to apply media queries to the website. -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- To adhear no-cache for Chrome -->
     <!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
@@ -48,16 +48,18 @@
       <!--header section start-->
       <header>
         <div class="wrapper">
-          <div class="outter-box header-outter">
+          <div class="header-box">
             <div class="left-header">
               <h1>
                 <a href="./index.html" class="header-logo" title="Header Logo"><img src="assets/images/logo.png" alt="Header Logo" />header logo</a>
               </h1>
+              <span class="architect">Architect</span>
             </div>
             <nav class="right-nav">
+              <a href="#FIXME" title="hamburger" class="hamburger">hamburger</a>
               <ul class="nav-menu">
                 <li class="menu-list">
-                  <a href="#FIXME" class="menu-item" title="Home">Home</a>
+                  <a href="./index.html" class="menu-item" title="Home">Home</a>
                 </li>
                 <li class="menu-list">
                   <a href="#FIXME" class="menu-item" title="About">About</a>
@@ -74,7 +76,7 @@
                 <li class="menu-list">
                   <a href="#FIXME" class="menu-item" title="Blog">Blog</a>
                 </li>
-                <li class="menu-list">
+                <li class="menu-list search">
                   <a href="#FIXME" class="menu-item" title="Search">Search</a>
                 </li>
               </ul>
@@ -87,48 +89,66 @@
       <main>
         <section class="banner">
           <div class="wrapper">
-            <div class="outter-box">
-              <div class="left-banner">
-                <h2 class="normal-heading">build</h2>
-                <h3 class="bold-heading">exclusive</h3>
-                <span class="letter-space">edifices</span>
-                <ul class="slider-lines">
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                  <li class="slides"><a href="#FIXME" class="line" title="Line">Line</a></li>
-                </ul>
-              </div>
-              <div class="right-banner">
-                <ul class="sliders">
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/image1.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/image2.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/img2.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                  <li class="slider-images">
-                    <figure>
-                      <img src="assets/images/img3.jpg" alt="Slider Image">
-                    </figure>
-                  </li>
-                </ul>
-              </div>
+            <div class="banner-box">
+              <ul class="sliders">
+                <li class="display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/banner-slider1.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/image1.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/image2.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="display-none">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/img2.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+                <li class="slider-images">
+                  <div class="slider-content">
+                    <h2 class="normal-heading headings">build</h2>
+                    <h3 class="bold-heading headings">exclusive</h3>
+                    <span class="letter-space">edifices</span>
+                  </div>
+                  <figure>
+                    <img src="assets/images/img3.jpg" alt="Slider Image">
+                  </figure>
+                </li>
+              </ul>
+              <ul class="slider-lines">
+                <li class="slides"><a href="#FIXME" class="line" title="First slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Second slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line slide-active" title="Third slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Fourth slide">Line</a></li>
+                <li class="slides"><a href="#FIXME" class="line" title="Fifth slide">Line</a></li>
+              </ul>
             </div>
           </div>
         </section>
@@ -137,40 +157,38 @@
             <div class="outter-box">
               <div class="left-content">
                 <span class="letter-space">why us?</span>
-                <h3 class="normal-heading">add</h3>
-                <h3 class="normal-heading">the most</h3>
-                <h4 class="bold-heading">bold projects</h4>
+                <h3 class="normal-heading headings">add</h3>
+                <h3 class="normal-heading headings">the most</h3>
+                <h4 class="bold-heading headings">bold projects</h4>
                 <p class="content">
                   Among many of my great projects there are some that occupy special places in my portfolio. There are lots of beautiful pieces created for the large families to become ancestral homes for the people who love art and architecture and value creativity in this hard and non sophisticated world of today.
                 </p>
               </div>
               <div class="right-content">
                 <figure>
-                  <img src="assets/images/image2.jpg" alt="Images">
-                </figure>
-                <figure>
-                  <img src="assets/images/image1.jpg" alt="Images">
+                  <img src="assets/images/image2.jpg" class="below-image" alt="Image">
+                  <img src="assets/images/image1.jpg" class="above-image" alt="Image">
                 </figure>
               </div>
             </div>
           </div>
         </section>
-        <section class="ask-pquestion">
+        <section class="ask-question">
           <div class="wrapper">
-            <h4 class="normal-pheading">ask</h4>
-            <h5 class="bold-heading">a question</h5>
+            <h4 class="normal-heading headings">ask</h4>
+            <h5 class="bold-heading headings">a question</h5>
             <form action="#FIXME" method="post">
               <div class="form-group">
-                <input type="text" name="name" class="form-pcontent" placeholder="Name:">
+                <input type="text" name="name" class="form-content" placeholder="Name:">
               </div>
               <div class="form-group">
-                <input type="text" name="email" class="form-pcontent" placeholder="Email:">
+                <input type="text" name="email" class="form-content" placeholder="E-mail address:">
               </div>
               <div class="form-group">
-                <textarea name="question" cols="30" rows="10" class="form-content"></textarea>
+                <textarea name="question" cols="30" rows="7" class="form-content" placeholder="Question"></textarea>
               </div>
-              <div class="form-pgroup">
-                <input type="submit" name="send" class="send-button" value="SEND">
+              <div class="form-group">
+                <input type="submit" name="send" class="send-button" value="Send">
               </div>
             </form>
           </div>
@@ -179,7 +197,28 @@
       <!--main section end-->
 
       <!--footer section start-->
-      <footer></footer>
+      <footer>
+        <div class="wrapper">
+          <div class="top-footer">
+            <h6>
+              <a href="./index.html" class="header-logo" title="Footer Logo"><img src="assets/images/logo.png" alt="Footer Logo">footer logo</a>
+              <span class="architect">Architect</span>
+            </h6>
+            <ul class="nav-footer">
+              <li class="footer-menu"><a href="./index.html" class="nav-active" title="Home">Home</a></li>
+              <li class="footer-menu"><a href="#FIXME" title="Blog">Blog</a></li>
+            </ul>
+          </div>
+          <div class="bottom-footer">
+            <p>Grafique Copyright &copy; 2019 <a href="#FIXME" target="_blank" title="Zemez">Zemez</a></p>
+            <ul class="social-links">
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Facebook">facebook</a></li>
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Twitter">twitter</a></li>
+              <li class="social-icon"><a href="#FIXME" target="_blank" class="icon" title="Instagram">instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
       <!--footer section end-->
     </div>
     <!--container end-->
